# ferro-protocols

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
crates/ferro-airflow-dag-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/ferro-airflow-dag-parser/examples/: extract_dag.rs
crates/ferro-airflow-dag-parser/fuzz/: Cargo.toml
crates/ferro-airflow-dag-parser/fuzz/fuzz_targets/: dynamic_markers.rs  extract_static_dag.rs
crates/ferro-airflow-dag-parser/fuzz/known-crash/dynamic_markers/: crash-0665b68cfa09313a49722865bfd38d45e81ea780  crash-d5f2d8f-littrs-tstring-2026-04-26
crates/ferro-airflow-dag-parser/fuzz/known-crash/extract_static_dag/: crash-11c5872-littrs-tstring-2026-04-26
crates/ferro-airflow-dag-parser/src/: api.rs  cache.rs  common.rs  dynamic_markers.rs  lib.rs  line_index.rs  panic_safe.rs  ruff_impl.rs
crates/ferro-airflow-dag-parser/tests/: api_dynamic_markers.rs  api_extract_all_static_dags.rs  api_extract_static_dag.rs  api_invalid_id.rs  api_parse_cache.rs  conformance.rs  mutation_guard.rs  stack_safety.rs
crates/ferro-airflow-dag-parser/tests/fixtures/: README.md  example_bash_operator.py  tutorial.py
crates/ferro-blob-store/: CHANGELOG.md  Cargo.toml  README.md
crates/ferro-blob-store/examples/: in_memory_round_trip.rs
crates/ferro-blob-store/fuzz/: Cargo.toml
crates/ferro-blob-store/fuzz/fuzz_targets/: parse_digest.rs
crates/ferro-blob-store/src/: blob_store.rs  digest.rs  error.rs  fs.rs  lib.rs  memory.rs
crates/ferro-cargo-registry-server/: CHANGELOG.md  Cargo.toml  README.md
crates/ferro-cargo-registry-server/examples/: serve_registry.rs  sparse_index_round_trip.rs
crates/ferro-cargo-registry-server/fuzz/: Cargo.toml
crates/ferro-cargo-registry-server/fuzz/fuzz_targets/: parse_publish_body.rs
crates/ferro-cargo-registry-server/src/: config.rs  error.rs  handlers.rs  index.rs  lib.rs  metrics.rs  name.rs  owners.rs  persist.rs  publish.rs  router.rs  serve.rs  version.rs  yank.rs
crates/ferro-cargo-registry-server/tests/: cargo_e2e.rs  conformance.rs  e2e-results.md  http_roundtrip.rs  metrics.rs
crates/ferro-cargo-registry-server/tests/fixtures/: README.md  anyhow-index.json  serde-index.json
crates/ferro-lumberjack/: CHANGELOG.md  Cargo.toml  README.md
crates/ferro-lumberjack/benches/: encode_decode.rs
crates/ferro-lumberjack/examples/: echo_server.rs  frame_codec.rs  send_event.rs
crates/ferro-lumberjack/fuzz/: Cargo.toml
crates/ferro-lumberjack/fuzz/fuzz_targets/: parse_frame.rs
crates/ferro-lumberjack/src/: client.rs  error.rs  frame.rs  lib.rs  sequence.rs  server.rs  tls.rs
crates/ferro-lumberjack/tests/: client_server_e2e.rs  conformance.rs  integration.rs
crates/ferro-lumberjack/tests/fixtures/: README.md
crates/ferro-maven-layout/: CHANGELOG.md  Cargo.toml  README.md
crates/ferro-maven-layout/examples/: parse_layout.rs
crates/ferro-maven-layout/fuzz/: Cargo.toml
crates/ferro-maven-layout/fuzz/fuzz_targets/: parse_layout_path.rs  parse_metadata_xml.rs
crates/ferro-maven-layout/fuzz/known-crash/parse_layout_path/: crash-b8d04a21589e783d7f81af97600dda60a40f7f6d
crates/ferro-maven-layout/src/: checksum.rs  coordinate.rs  error.rs  handlers.rs  layout.rs  lib.rs  metadata.rs  pom.rs  router.rs  snapshot.rs  xml.rs
crates/ferro-maven-layout/tests/: chaos_metadata_race.rs  conformance.rs  http_roundtrip.rs
crates/ferro-maven-layout/tests/fixtures/: README.md  commons-lang3-3.14.0.pom.xml  commons-lang3-maven-metadata.xml
crates/ferro-oci-server/: CHANGELOG.md  Cargo.toml  README.md
crates/ferro-oci-server/examples/: parse_reference.rs
crates/ferro-oci-server/fuzz/: Cargo.toml
crates/ferro-oci-server/fuzz/fuzz_targets/: parse_reference.rs
crates/ferro-oci-server/src/: error.rs  lib.rs  manifest.rs  media_types.rs  metrics.rs  reference.rs  registry.rs  router.rs  serve.rs  upload.rs
crates/ferro-oci-server/src/handlers/: base.rs  blob.rs  blob_upload.rs  catalog.rs  manifest.rs  mod.rs  referrers.rs  tags.rs
crates/ferro-oci-server/tests/: chaos_upload_partition.rs  conformance.rs  conformance_smoke.rs  handler_edge_cases.rs  metrics.rs
crates/ferro-oci-server/tests/conformance/: .gitignore  RESULTS.md  run_conformance.sh
crates/ferro-oci-server/tests/fixtures/: README.md  oci-image-manifest.json
dd-pack/: 08-dd-rounds-history.md  11-known-limitations.md  HANDOFF_2026_06_08_FERROPROTOCOLS_SHIP_READY.md  adoption-snapshot.md  codex-r1-prompt.md  codex-r2-prompt.md  codex-r3-prompt.md  codex-r4-prompt.md  (+4 more)
fuzz/: .gitignore  Cargo.toml  triage-2026-05-07.md
fuzz/corpus/airflow_dag_extract/: regression-deep-bracket-stack-overflow-2026-05-03  regression-littrs-fstring-tstring-token-2026-05-07-a  regression-littrs-fstring-tstring-token-2026-05-07-b  regression-tilde-chain-stack-overflow-2026-05-09
fuzz/fuzz_targets/: airflow_dag_extract.rs  lumberjack_frame_decode.rs  maven_pom_parse.rs
fuzz/known-crash/airflow_dag_extract/: DISCLOSURE_TIMELINE.md  FINDING.md  README-oom-2026-05-14.md  crash-22a32acc97fe6d827cfcf7000d15472194dfc8d9  crash-4dc14fedabc0174274bc6a3a46b7f0002a4c1a53  crash-95c97080d71f4a0729f70e80b8bee0925ba9fcf7  crash-b2ba4d6bf95915404ac31f4a83e11a32dd5874be  crash-bd72f9ccbb2de252b9adca4078b9f1087f764f13  crash-ed5f25a43a56343e36eee9ffa86fd838f3ee9aa4  crash-f1701ee9fdfe2139cada2e70fe7a9ad829435cd2  oom-19d70cb8aa09-15ms-benign-2026-05-17  oom-265c09cde1ca-3ms-benign-2026-05-17  oom-284d5962-11ms-benign-2026-05-19  oom-72251cb9-single-replay-benign-3ms-2026-05-16  oom-7452cf811cf3-2026-05-14  oom-a0b6d564-22ms-benign-2026-05-19  oom-ac6ba8cf6b76-6ms-benign-2026-05-17  oom-c51874bb-1ms-cumulative-rss-falsepos-2026-06-14  oom-fca6b0c1-match-bracket-1001b-2026-05-15
fuzz/known-crash/lumberjack_frame_decode/: timeout-302c1baa28c475b02d173e695000d303eceea992-2026-05-07  timeout-d4e24ab238c603b5ef01d996f1b82bbc3b47dc7b-2026-05-07
fuzz/known-crash/maven_pom_parse/: crash-1ceeadf1-quick-xml-unreachable-2026-05-15
(+47 files in other folders)
