# SPDX-License-Identifier: Apache-2.0
[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/*/fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
homepage = "https://github.com/abyo-software/ferro-protocols"
repository = "https://github.com/abyo-software/ferro-protocols"
authors = ["abyo software 合同会社 (abyo software LLC) <dev@abyo.net>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic relaxations — same set the rest of the Ferro ecosystem uses.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
async-trait = "0.1"

# TLS material loading
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
rustls-pki-types = "1"

# Compression (lumberjack zlib)
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# Bytes / IO helpers
bytes = "1"

# Errors
thiserror = "2"

# Tracing
tracing = "0.1"

# Test deps
proptest = "1.5"
tokio-test = "0.4"

# Bench
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# Release profile.
#
# Note: we deliberately do NOT set `panic = "abort"` at the workspace
# level even though several Ferro main-product binaries do. The
# `ferro-airflow-dag-parser::panic_safe` shim catches upstream parser
# panics and converts them to `ParseError::Internal`; that requires
# `panic = "unwind"` (the Rust default) at the time of build. Setting
# `abort` here would silently disable the shim. Consumers who want
# `panic = "abort"` for their own binaries can set it at their own
# package level.
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.bench]
debug = true
