# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-cargo-registry-server"
version = "0.1.0"
description = "Cargo Alternative Registry Protocol server-side primitives — sparse index, /config.json, publish/yank/owners API. Backed by ferro-blob-store. Extracted from the Ferro ecosystem."
categories = ["development-tools::cargo-plugins", "web-programming::http-server"]
keywords = ["cargo", "registry", "sparse-index", "axum", "alternative"]
readme = "README.md"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ferro-blob-store = { version = "0.1", path = "../ferro-blob-store" }
axum = "0.8"
tokio = { workspace = true, features = ["sync"] }
bytes = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
sha2 = "0.10"
hex = "0.4"
http = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing.workspace = true
regex = "1"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
