# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-oci-server"
version = "0.1.0"
description = "OCI Distribution Specification v1.1 server-side primitives — manifest / blob / tag / referrers handlers, chunked uploads, in-memory metadata plane. Backed by ferro-blob-store. Extracted from the Ferro ecosystem."
categories = ["web-programming::http-server", "development-tools"]
keywords = ["oci", "distribution", "registry", "docker", "axum"]
readme = "README.md"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ferro-blob-store = { version = "0.1", path = "../ferro-blob-store", features = ["serde", "fs"] }
axum = "0.8"
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "net", "signal"] }
bytes = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
http = "1"
futures = "0.3"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
prometheus = { version = "0.14", default-features = false }

[[bin]]
name = "ferro-oci-server"
path = "src/bin/ferro-oci-server.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
