# SPDX-License-Identifier: Apache-2.0
[workspace]
# fuzz dirs are excluded from the parent workspace via
# `workspace.exclude` in the root Cargo.toml; this empty table marks
# the fuzz package as its own standalone workspace so cargo-fuzz can
# build it without conflict.

[package]
name = "ferro-maven-layout-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ferro-maven-layout = { path = ".." }

[[bin]]
name = "parse_layout_path"
path = "fuzz_targets/parse_layout_path.rs"
test = false
doc = false
bench = false
